// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimPublication test renders empty list 1`] = `
<StandardPage
  title="Claim possible publications"
>
  <StandardCard
    className=""
    help={
      Object {
        "buttonLabel": "Ok",
        "text": "Why search didn't return any items....",
        "title": "No matching records found",
      }
    }
    text="No publications were automatically matched for you to claim."
    title="No matching publications found"
  >
    No publications were automatically matched for you to claim.
  </StandardCard>
</StandardPage>
`;

exports[`ClaimPublication test renders list of publications and counts 1`] = `
<StandardPage
  title="Claim possible publications"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to hide selected possibly your publication from this view?",
        "confirmationTitle": "Hide publication",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <StandardCard
    className=""
    help={
      Object {
        "buttonLabel": "Ok",
        "text": "Why search didn't return any items....",
        "title": "No matching records found",
      }
    }
    text="No publications were automatically matched for you to claim."
    title="No matching publications found"
  >
    No publications were automatically matched for you to claim.
  </StandardCard>
</StandardPage>
`;

exports[`ClaimPublication test renders loading screen while loading author data 1`] = `
<StandardPage
  title="Claim possible publications"
>
  <div
    className="is-centered"
  >
    <InlineLoader
      message="Searching for your publications..."
    />
  </div>
</StandardPage>
`;

exports[`ClaimPublication test renders loading screen while loading publications  1`] = `
<StandardPage
  title="Claim possible publications"
>
  <div
    className="is-centered"
  >
    <InlineLoader
      message="Searching for your publications..."
    />
  </div>
</StandardPage>
`;

exports[`ClaimPublication test renders no results 1`] = `
<StandardPage
  title="Claim possible publications"
>
  <StandardCard
    className=""
    help={
      Object {
        "buttonLabel": "Ok",
        "text": "Why search didn't return any items....",
        "title": "No matching records found",
      }
    }
    text="No publications were automatically matched for you to claim."
    title="No matching publications found"
  >
    No publications were automatically matched for you to claim.
  </StandardCard>
</StandardPage>
`;
